<resources>
    <string name="app_name">PLSpreadsheets</string>
    <string name="new_string">new</string>
    <string name="save_string">save</string>
    <string name="title_string">Title</string>
    <string name="_1_week">+1 week</string>
    <string name="_2_week">-1 week</string>
    <string name="monday">Monday</string>
    <string name="exercise">+ Exercise</string>
    <string name="exercise_name">Exercise name</string>
    <string name="done">done</string>
    <string name="set">+set</string>
    <string name="reps">Reps</string>
    <string name="weight">Weight</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="cancel2">cancel</string>
    <string name="cancel3">cancel</string>
    <string name="_1_rep_max">1 Rep Max</string>
    <string name="calculate">calculate</string>
    <string name="set_maxes">set maxes</string>
    <string name="done_2">done</string>
</resources>
