<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jesper.plspreadsheets.create.CreateDayActivity"
    android:background="#4c3b3b3b">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/exercise_name"
        android:id="@+id/nameText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputName"
        android:layout_below="@+id/nameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:layout_toLeftOf="@+id/doneBtn"
        android:layout_toStartOf="@+id/doneBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/doneBtn"
        android:layout_alignBottom="@+id/inputName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:id="@+id/setBtn"
        android:layout_below="@+id/inputName"
        android:layout_alignRight="@+id/exScroll"
        android:layout_alignEnd="@+id/exScroll" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/exScroll"
        android:fillViewport="true"
        android:layout_below="@+id/setBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grid"
            android:rowCount="1"
            android:columnCount="3"></GridLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/reps"
        android:id="@+id/repsText"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_alignTop="@+id/setBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/weight"
        android:id="@+id/weightText"
        android:layout_below="@+id/inputName"
        android:layout_toRightOf="@+id/nameText"
        android:layout_toEndOf="@+id/nameText"
        android:layout_marginLeft="-20dp"
        android:inputType="text" />

</RelativeLayout>
